<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">liugaopoDemoJson</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="_score">成绩</string>
    <string name="math">math</string>
    <string name="english">english</string>
    <string name="chinese">chinese</string>
    <string name="telephone">telephone</string>
    <string name="_phone">电话</string>

</resources>