<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView 
        android:id="@+id/item_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
	<TextView 
	    android:id="@+id/item_name"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="25sp"
	    />
	<TextView 
	    android:id="@+id/item_age"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="25sp"
	    />
	<TableLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
	<TableRow >
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/_score"
	    android:textSize="25sp"
	    />
	</TableRow>
	<TableRow >
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/math"
	    android:textSize="20sp"
	    />
	<TextView 
	    android:id="@+id/item_math"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    />
	</TableRow>
		<TableRow >
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/english"
	    android:textSize="20sp"
	    />
	<TextView 
	    android:id="@+id/item_english"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    />
	</TableRow>
	<TableRow>
		<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/chinese"
	    android:textSize="20sp"
	    />
	<TextView 
	    android:id="@+id/item_chinese"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    />
	</TableRow>
	</TableLayout>
	<TableLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
	<TableRow >
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/telephone"
	    android:textSize="25sp"
	    />
	</TableRow>
	<TableRow >
	<TextView 
	    android:id="@+id/item_phone1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    />
	<TextView 
	    android:id="@+id/item_phone2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    />
	</TableRow>
	</TableLayout>

</LinearLayout>